# rodan-fileserver

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ghcr.yml
src/: auth.rs  handler.rs  main.rs  middleware.rs
static/: 404.html
