[package]
name = "rodan-fileserver"
version = "0.1.0"
edition = "2024"
authors = ["intraware"]
description = "A microservice for rodan"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.47.0"
